🚀 first start of using oauth2 from google *yay*

--- a/starter/src/main/resources/static/index.html
+++ b/starter/src/main/resources/static/index.html
@@ -12,6 +12,10 @@
 </head>
 <body>
 <h1>Demo</h1>
-<div class="container"></div>
+<div class="container">
+    <div>
+        With Google: <a href="login/oauth2/authorization/google">click here</a>
+    </div>
+</div>
 </body>
 </html>
